# sanger_rename

./: Cargo.toml  LICENSE  readme.md
fixtures/genewiz/: k1-2_C1-R_G04.ab1
fixtures/ruibio/: K528-1.C1.34781340.B08.ab1
fixtures/sangon/: 0002_31225060307073_(GAPDH)_[SP2].ab1
src/: lib.rs  main.rs  refactored_sanger.rs  sanger_filename.rs  tui.rs
src/tui/: common.rs  confirm_rename.rs  date_selection.rs  mod.rs  primer_rename.rs  template_rename.rs  vendor_selection.rs
src/vendors/: genewiz.rs  ruibio.rs  sangon.rs
