[package]
name = "sanger-rename"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["macros"]}
crossterm = { version = "0.29", features = ["serde"] }
anyhow = "1.0.98"
strum = { version = "0.27.1", features = ["derive"] }
